doc: update role swagger doc
